--- a/Mod3-proyecto-final-individual/Mod3 proyecto final.ipynb
+++ b/Mod3-proyecto-final-individual/Mod3 proyecto final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "8707ae34",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "01868e8b",
    "metadata": {},
    "outputs": [
@@ -207,7 +209,7 @@
        "4                     13  540050030025, TA-095-127-9616-01  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "2d21b269",
    "metadata": {},
    "outputs": [
@@ -235,7 +237,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "f1969da0",
    "metadata": {},
    "outputs": [
@@ -256,7 +258,7 @@
        "33457"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f46ca9db",
    "metadata": {},
    "outputs": [
@@ -279,7 +281,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "b9923e7e",
    "metadata": {},
    "outputs": [
@@ -308,7 +310,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "4637aeb6",
    "metadata": {},
    "outputs": [
@@ -363,7 +365,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "59610e23",
    "metadata": {},
    "outputs": [
@@ -418,7 +420,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "6a925cd6",
    "metadata": {},
    "outputs": [
@@ -460,7 +462,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "706a9953",
    "metadata": {},
    "outputs": [
@@ -502,7 +504,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "28534118",
    "metadata": {},
    "outputs": [],
@@ -526,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "8872bd26",
    "metadata": {},
    "outputs": [
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "24abdb3d",
    "metadata": {},
    "outputs": [
@@ -582,6 +584,383 @@
     "\n",
     "print(\"Los outliers inflan la media, se ve afectada por los precios muy altos, mientras que la mediana no se ve afectada,\\nmuestra mejor el precio tipico de los alojamieintos\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3bd1fdc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 33457 entries, 0 to 33456\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   id                              33457 non-null  int64  \n",
+      " 1   name                            33457 non-null  object \n",
+      " 2   host_id                         33457 non-null  int64  \n",
+      " 3   host_name                       33455 non-null  object \n",
+      " 4   neighbourhood_group             33457 non-null  object \n",
+      " 5   neighbourhood                   33457 non-null  object \n",
+      " 6   latitude                        33457 non-null  float64\n",
+      " 7   longitude                       33457 non-null  float64\n",
+      " 8   room_type                       33457 non-null  object \n",
+      " 9   price                           33132 non-null  float64\n",
+      " 10  minimum_nights                  33457 non-null  int64  \n",
+      " 11  number_of_reviews               33457 non-null  int64  \n",
+      " 12  last_review                     26731 non-null  object \n",
+      " 13  reviews_per_month               26731 non-null  float64\n",
+      " 14  calculated_host_listings_count  33457 non-null  int64  \n",
+      " 15  availability_365                33457 non-null  int64  \n",
+      " 16  number_of_reviews_ltm           33457 non-null  int64  \n",
+      " 17  license                         27687 non-null  object \n",
+      "dtypes: float64(4), int64(7), object(7)\n",
+      "memory usage: 4.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FASE 2\n",
+    "\n",
+    "# nulos: host_name, price, last_review, reviews_per_month, license\n",
+    "df_alojamientos.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "66b8b5a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                   0\n",
+       "name                                 0\n",
+       "host_id                              0\n",
+       "host_name                            2\n",
+       "neighbourhood_group                  0\n",
+       "neighbourhood                        0\n",
+       "latitude                             0\n",
+       "longitude                            0\n",
+       "room_type                            0\n",
+       "price                              325\n",
+       "minimum_nights                       0\n",
+       "number_of_reviews                    0\n",
+       "last_review                       6726\n",
+       "reviews_per_month                 6726\n",
+       "calculated_host_listings_count       0\n",
+       "availability_365                     0\n",
+       "number_of_reviews_ltm                0\n",
+       "license                           5770\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# nulos por columna\n",
+    "\n",
+    "df_alojamientos.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c45a8a95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sustituyo los nulos por Unknown\n",
+    "df_alojamientos['host_name'] = df_alojamientos['host_name'].fillna('Unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b3d8e19e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eliminación de columnas\n",
+    "df_alojamientos = df_alojamientos.drop(columns=['last_review', 'reviews_per_month', 'latitude', 'longitude', 'neighbourhood_group'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cdfd3962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eliminar filas nulas en Price\n",
+    "df_alojamientos = df_alojamientos.dropna(subset=['price'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7a4f95c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                False\n",
+       "name                              False\n",
+       "host_id                           False\n",
+       "host_name                         False\n",
+       "neighbourhood                     False\n",
+       "room_type                         False\n",
+       "price                             False\n",
+       "minimum_nights                    False\n",
+       "number_of_reviews                 False\n",
+       "calculated_host_listings_count    False\n",
+       "availability_365                  False\n",
+       "number_of_reviews_ltm             False\n",
+       "license                            True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compruebo los nulos (mantengo los nulos en license)\n",
+    "df_alojamientos.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22d773ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No hay filas duplicadas\n",
+    "df_alojamientos.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bfd43d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 33132 entries, 0 to 33456\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   id                              33132 non-null  int64  \n",
+      " 1   name                            33132 non-null  object \n",
+      " 2   host_id                         33132 non-null  int64  \n",
+      " 3   host_name                       33132 non-null  object \n",
+      " 4   neighbourhood                   33132 non-null  object \n",
+      " 5   room_type                       33132 non-null  object \n",
+      " 6   price                           33132 non-null  float64\n",
+      " 7   minimum_nights                  33132 non-null  int64  \n",
+      " 8   number_of_reviews               33132 non-null  int64  \n",
+      " 9   calculated_host_listings_count  33132 non-null  int64  \n",
+      " 10  availability_365                33132 non-null  int64  \n",
+      " 11  number_of_reviews_ltm           33132 non-null  int64  \n",
+      " 12  license                         27394 non-null  object \n",
+      "dtypes: float64(1), int64(7), object(5)\n",
+      "memory usage: 3.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_alojamientos.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3de826b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cambiar tipo de dato de columnas: id/host_id --> object \n",
+    "# Convertir id y host_id a tipo object (categórico)\n",
+    "\n",
+    "df_alojamientos['id'] = df_alojamientos['id'].astype(object)\n",
+    "df_alojamientos['host_id'] = df_alojamientos['host_id'].astype(object)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5cc20f57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 33132 entries, 0 to 33456\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   id                              33132 non-null  object \n",
+      " 1   name                            33132 non-null  object \n",
+      " 2   host_id                         33132 non-null  object \n",
+      " 3   host_name                       33132 non-null  object \n",
+      " 4   neighbourhood                   33132 non-null  object \n",
+      " 5   room_type                       33132 non-null  object \n",
+      " 6   price                           33132 non-null  float64\n",
+      " 7   minimum_nights                  33132 non-null  int64  \n",
+      " 8   number_of_reviews               33132 non-null  int64  \n",
+      " 9   calculated_host_listings_count  33132 non-null  int64  \n",
+      " 10  availability_365                33132 non-null  int64  \n",
+      " 11  number_of_reviews_ltm           33132 non-null  int64  \n",
+      " 12  license                         27394 non-null  object \n",
+      "dtypes: float64(1), int64(5), object(7)\n",
+      "memory usage: 3.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_alojamientos.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f05ef20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price\n",
+      "0    136.0\n",
+      "1    122.0\n",
+      "2    117.0\n",
+      "3    150.0\n",
+      "4    149.0\n",
+      "5    275.0\n",
+      "6    279.0\n",
+      "7    124.0\n",
+      "8    165.0\n",
+      "9    311.0\n",
+      "Name: price, dtype: float64\n",
+      "---\n",
+      "minimum_nights\n",
+      "0    3\n",
+      "1    5\n",
+      "2    2\n",
+      "3    4\n",
+      "4    3\n",
+      "5    1\n",
+      "6    2\n",
+      "7    2\n",
+      "8    5\n",
+      "9    7\n",
+      "Name: minimum_nights, dtype: int64\n",
+      "---\n",
+      "host_name\n",
+      "0     Lea & Pat\n",
+      "1        Edward\n",
+      "2       Normand\n",
+      "3      Caroline\n",
+      "4    Annie/Greg\n",
+      "5          Lisa\n",
+      "6    Janet Lynn\n",
+      "7        Donald\n",
+      "8          Mary\n",
+      "9        Dennis\n",
+      "Name: host_name, dtype: object\n",
+      "---\n",
+      "name\n",
+      "0            Upcountry Hospitality in the 'Auwai Suite\n",
+      "1                  Hale Koa Studio & 1 Bedroom Units!!\n",
+      "2                   Isle Of You Naturally Farm Retreat\n",
+      "3    Maui Sunset Condo Beachfront Resort, Kihei/Wailea\n",
+      "4    Studio On Princeville Golf Course / Paniolo Condo\n",
+      "5                      2BR Pacific Shores by the Beach\n",
+      "6      Oceanfront Bali House w/ Hot tub @ Kehena Beach\n",
+      "7                  Luana Kai Oceanfront Condo by Owner\n",
+      "8       Very Close to Alii Drive and Magic Sands Beach\n",
+      "9    Ocean Front View Condo Kaanapali Beach Hilton ...\n",
+      "Name: name, dtype: object\n",
+      "---\n",
+      "license\n",
+      "0                    119-269-5808-01R\n",
+      "1                  TA-163-133-0304-01\n",
+      "2                                 NaN\n",
+      "3    390010020007, TA-169-914-3680-01\n",
+      "4    540050030025, TA-095-127-9616-01\n",
+      "5    390180020064, TA-103-659-7248-01\n",
+      "6                TAGE 176-619-3665-01\n",
+      "7    390010060078, TA-188-987-8016-01\n",
+      "8                  TA-140-150-3744-01\n",
+      "9    440010980014, TA-535-421-3510-12\n",
+      "Name: license, dtype: object\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Limpieza simbolos o caracteres especiales\n",
+    "\n",
+    "# Revisar los primeros valores de varias columnas\n",
+    "for i in ['price', 'minimum_nights', 'host_name', 'name', 'license']:\n",
+    "    print(i)\n",
+    "    print(df_alojamientos[i].head(10))\n",
+    "    print('---')\n",
+    "\n",
+    "# price y minimum_nights está ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de29a373",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eliminamos espacios al inicio y unificar a minúsculas\n",
+    "\n",
+    "columnas_categoricas = ['room_type', 'neighbourhood', 'host_name', 'license', 'name']\n",
+    "\n",
+    "for i in columnas_categoricas:\n",
+    "    df_alojamientos[i] = df_alojamientos[i].str.strip().str.lower() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a22ea4a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
